# Debian-1.3-Analysis

./: agetty.md  bash-2.0  bind.md  bo  boot.md  cat.md  chmod.md  chown.md  clock.md  close.md  connect.md  cp.md  dd.md  e2fsprogs-1.10  echo.md  etc  execve.md  fileutils-3.16  fmalloc.md  fork.md  fsck.md  hostname-2.01  hostname.md  ifconfig.md  inetd.md  init.md  kill.md  libc-5.4.33  libc4-4.6.27  linux  login.md  mdutils0.35  mmap.md  modutils-2.1.34  mount-2.6d  mount.md  mv.md  net-tools-1.2.0  netbase-2.13  open.md  (+24 more)
debian-bo-master/bo/source/admin/cfengine-1.3.19.orig/: CFENGINE-TO-DO  Makefile.in  README  VERSION.DIFF  configure  configure.in  version
debian-bo-master/bo/source/admin/super-3.10.6.orig/: INSTALL  INSTALL.notes  Makefile.in  README  WhatsNew  approve.c  braces.c  checks.c  colon.c  config.h.in  configure  configure.in  error.c  gsgroups.c  hsearch.c  hsearch.h  localsys.h  options.c  options.h  rsyslog.c  s_re_fail.c  s_regex.c  sample.tab  setuid.1  setuid.c  strqtokS.c  super.1.in  super.5.in  super.c  super.h  time.c  utils.c  version.h  wildmat.c
debian-bo-master/bo/source/base/shadow-961025.orig/: Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  mkinstalldirs
debian-bo-master/bo/source/base/textutils-1.22.orig/: Makefile.am  Makefile.in  README  THANKS  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
debian-bo-master/bo/source/devel/gpc-2.0.orig/: .gdbinit  ChangeLog  FAQ  FPKvsGNU  INSTALL  Makefile.in  NEWS  PROBLEMS  README  aclocal.m4  configure  configure.bat  configure.cmd  configure.in  convert.c  dbxout.c  expr.c  fold-const.c  function.c  gcc.c  gpc-cccp.c  gpc-common.c  gpc-convert.c  gpc-decl.c  gpc-defs.h  gpc-gperf.c  gpc-lang.c  gpc-lang.h  gpc-lex.c  gpc-module.c  gpc-options.h  gpc-parse.c  gpc-parse.h  gpc-parse.y  gpc-typeck.c  gpc-util.c  gpc-version.in  gpc.gperf  optabs.c  options.h  (+3 more)
debian-bo-master/bo/source/devel/groupkit-3.2.orig/: Makefile.in  README  buildTclIndex  changes  configure  configure.in  gk.c  gk.h  gkenv.c  tclXkeylist.c  tclXmath.c  tkAppInit.c  tkMain.c
debian-bo-master/bo/source/editors/jed-0.98.2.orig/: COPYRIGHT  INSTALL  INSTALL.pc  INSTALL.unx  INSTALL.vms  Makefile.in  README  changes.txt  configure  configure.in  jed.lis
debian-bo-master/bo/source/editors/sex-0.9.orig/: BUGS  Changes  Makefile.in  README  SeX  actions.c  actions.h  ad2c  anchor.c  anchor.h  buflist.c  buflist.h  cmd-cut.c  cmd-file.c  cmd-misc.c  cmd-move.c  cmd-search.c  cmd-selection.c  cmd-win.c  cmd.h  config.c  config.h  configure  configure.in  editwin.c  editwin.h  endprompt.c  endprompt.h  error.c  error.h  filewin.c  filewin.h  font.c  font.h  killring.c  killring.h  menu.c  menu.h  msgwin.c  msgwin.h  (+15 more)
debian-bo-master/bo/source/games/acm-4.7.orig/: ACM-Bibliography  ACM.tmpl  Imakefile  Makefile.in  README  configure  configure.in
debian-bo-master/bo/source/games/pente-2.1.11.orig/: Makefile-std  Makefile.in  README  configure  configure.h.in  configure.in
debian-bo-master/bo/source/games/thrust-0.79c.orig/: CHANGES  INSTALL  Makefile.bindist.in  Makefile.in  README  TODO  configure  configure.in  thrust-0.79c.lsm  thrust.man  thrust.pod.in  thrustrc
debian-bo-master/bo/source/games/xbl-1.0f.orig/: INSTALL  Makefile.in  README  Xbl.ad  Xbl.iafa  Xbl.lsm  ansi.h  bl.c  bl.h  bloc.c  bloc.h  buttons.c  buttons.h  configure  configure.in  define.h  demo.c  draw.c  draw.h  gameevent.c  help.c  icone.h  initbloc.c  initbuffer.c  initdisp.c  initgc.c  initmenu.c  initwin.c  keyid.h  loop.c  menu.c  menu.h  movingbloc.c  movingbloc.h  movingbutton.c  movingbutton.h  opbloc.c  opt.h  options.c  options.h  (+38 more)
debian-bo-master/bo/source/graphics/imagemagick-3.8.2.orig/: ImageMagick.html  ImageMagick.man  Imakefile  Install  Magick.tmpl  Makefile  Makefile.in  Manifest.ps  README  X.h  animate.c  animate.h  animate.man  combine.c  combine.man  configure  configure.in  convert.c  convert.man  display.c  display.h  display.man  identify.c  identify.man  import.c  import.man  miff.man  mogrify.c  mogrify.man  montage.c  montage.man  quantize.man
debian-bo-master/bo/source/interpreters/scm-4e6.orig/: ANNOUNCE  ChangeLog  Iedline.scm  Init.scm  Link.scm  Makefile  Makefile.in  README  README.unix  Transcen.scm  acconfig-1.5.h  bench.scm  build.bat  build.scm  configure  configure.in  continue.c  continue.h  crs.c  dynl.c  edline.c  eval.c  findexec.c  gsubr.c  ioext.c  patchlvl.h  pi.c  pi.scm  posix.c  r4rstest.scm  ramap.c  record.c  repl.c  rgx.c  rope.c  sc2.c  scl.c  scm.1  scm.c  scm.doc  (+14 more)
debian-bo-master/bo/source/libs/lesstif-0.76.orig/: BUG-REPORTING  CREDITS  INSTALL  KNOWN_BUGS  Makefile.in  NOTES  RELEASE-POLICY  TODO  config.guess  config.sub  configure  configure.cmd  configure.in
debian-bo-master/bo/source/libs/libtclobjc-1.1b3.orig/: ChangeLog  ChangeLog-1.0  HashTable.m  INSTALL  List.m  Makefile.in  NEWS  README.old  TODO  Tcl.h  Tcl.m  Tk.h  Tk.m  check.tcl  check.tk  checkTcl.m  checkTk.m  configure  configure.in  tclObjc.h  tclObjc.m  xmalloc.c
debian-bo-master/bo/source/libs/tix40-4.0.5.orig/: ABOUT.html  ABOUT.txt  Makefile.in  README.html  README.txt  Version  configure  configure.in  license.tcl  license.terms  setup  tixConfig.tcl.in
debian-bo-master/bo/source/mail/af-1.99.18-beta.orig/: INSTALL  Makefile  README  aclocal.m4  configure  configure.in  install.sh
debian-bo-master/bo/source/mail/berolist-2.3.5.orig/: CHANGES  CREDITS  Makefile.in  PROBLEMS  README  cgipath.h  cgitool.c  cgitool.h  configure  configure.in  display.c  list.c  list.h  messages.c  socket.c  socket.h  tool.c  tool.h
debian-bo-master/bo/source/mail/tkmail-4.0beta8.orig/: BETANOTES  Config.mk  Makefile  README  TODO  configure  configure.in
debian-bo-master/bo/source/math/gnuplot-3.5beta6.328.orig/: 0BUGS  0INSTALL  Makefile.in  aclocal.m4  alloc.c  alloc.h  bf_test.c  binary.c  bitmap.c  command.c  configure  configure.in  contour.c  corplot.c  datafile.c  eval.c  fit.c  fit.h  gplt_x11.c  graph3d.c  graphics.c  help.c  help.h  hidden3d.c  internal.c  interpol.c  matrix.c  (+25 more)
(+65853 files in other folders)
